# LeaderBoard

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  psycopg2-2.9.1-cp310-cp310-linux_x86_64.whl  pyproject.toml
locust/: test.py
web/: Dockerfile  manage.py
web/accounts/: apps.py  serializers.py  tests.py  urls.py  views.py
web/accounts/migrations/: 0001_initial.py
web/config/: asgi.py  settings.py  urls.py  wsgi.py
web/prediction/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
web/prediction/fixtures/: games.json  gamesleaderboard.json  teams.json  users.json
web/prediction/migrations/: 0001_initial.py  0002_alter_gamesleaderboard_games.py  0003_alter_prediction_exact_prediction.py  0004_remove_game_ended_and_more.py  0005_alter_gamesleaderboard_games_leaderboard_scoresheet.py  0006_alter_gamesleaderboard_games_leaderboard_scoresheet.py  0007_alter_gamesleaderboard_games_leaderboard_scoresheet.py  0008_alter_prediction_game_prediction.py
